[tool.poetry]
name = "aula08-bootcamp"
version = "1"
description = ""
authors = ["Matheus <matheusk42@hotmail.com"]
license = "s"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.3"
pandera = "^0.22.1"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
